// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Facebook post mapper (pinning) detectPostContentType album attachment 1`] = `"carousel"`;

exports[`Facebook post mapper (pinning) detectPostContentType image attachment 1`] = `"image"`;

exports[`Facebook post mapper (pinning) detectPostContentType no attachment, full_picture present 1`] = `"image"`;

exports[`Facebook post mapper (pinning) detectPostContentType no attachment, no full_picture 1`] = `"other"`;

exports[`Facebook post mapper (pinning) detectPostContentType type=video_inline only 1`] = `"video"`;

exports[`Facebook post mapper (pinning) detectPostContentType video attachment 1`] = `"video"`;

exports[`Facebook post mapper (pinning) extractMediaUrls attachments with sources + subattachments 1`] = `
[
  "https://a/x.mp4",
  "https://a/sub1.jpg",
  "https://a/sub2.jpg",
]
`;

exports[`Facebook post mapper (pinning) extractMediaUrls falls back to full_picture when attachments empty 1`] = `
[
  "https://a/cover.jpg",
]
`;

exports[`Facebook post mapper (pinning) extractPictureUrl nested data.url 1`] = `"https://cdn.fb/pic.jpg"`;

exports[`Facebook post mapper (pinning) extractPictureUrl no data 1`] = `null`;

exports[`Facebook post mapper (pinning) extractPictureUrl null 1`] = `null`;

exports[`Facebook post mapper (pinning) extractPictureUrl string (invalid) 1`] = `null`;

exports[`Facebook post mapper (pinning) extractPostMetrics summary counts only (no insights) 1`] = `
{
  "comments": 7,
  "likes": 22,
}
`;

exports[`Facebook post mapper (pinning) extractPostMetrics with reactions_by_type insights overlay 1`] = `
{
  "comments": 4,
  "extra": {
    "post_clicks": 75,
    "post_impressions": 1200,
    "reaction_like": 20,
    "reaction_love": 8,
    "reaction_wow": 2,
  },
  "likes": 30,
}
`;

exports[`Facebook post mapper (pinning) mergePostInsights reactions + clicks + activity flatten into metrics + extra 1`] = `
{
  "extra": {
    "activity_comment": 12,
    "activity_share": 7,
    "click_link_clicks": 10,
    "click_photo_view": 30,
    "post_video_views": 0,
    "reaction_haha": 4,
    "reaction_like": 80,
    "reaction_love": 20,
    "reaction_wow": 1,
  },
  "likes": 105,
  "views": 5500,
}
`;

exports[`Facebook post mapper (pinning) mergeVideoInsights total_video_views/_unique/_impressions/reactions feed canonical metrics 1`] = `
{
  "extra": {
    "reaction_like": 100,
    "reaction_love": 40,
  },
  "likes": 140,
  "reach": 9100,
  "views": 12345,
}
`;

exports[`Facebook post mapper (pinning) postToContent carousel/album post with subattachments 1`] = `
{
  "caption": "Trip recap",
  "children": [
    {
      "id": "12345_222-sub-0",
      "mediaType": "image",
      "mediaUrl": "https://scontent.example/c1.jpg",
      "permalink": null,
      "thumbnailUrl": "https://scontent.example/c1.jpg",
    },
    {
      "id": "12345_222-sub-1",
      "mediaType": "image",
      "mediaUrl": "https://scontent.example/c2.mp4",
      "permalink": null,
      "thumbnailUrl": null,
    },
    {
      "id": "12345_222-sub-2",
      "mediaType": "image",
      "mediaUrl": "https://scontent.example/c3.jpg",
      "permalink": "https://scontent.example/c3.jpg",
      "thumbnailUrl": null,
    },
  ],
  "contentType": "carousel",
  "fetchedAt": 2026-04-28T12:00:00.000Z,
  "linkAttachmentTitle": null,
  "linkAttachmentUrl": null,
  "location": null,
  "mediaProductType": null,
  "mediaUrls": [
    "https://scontent.example/c1.jpg",
    "https://scontent.example/c2.mp4",
    "https://scontent.example/c3.jpg",
  ],
  "mentions": null,
  "metrics": {
    "comments": 5,
    "likes": 27,
  },
  "permalink": "https://facebook.com/12345/posts/222",
  "platformContentId": "12345_222",
  "publishedAt": 2026-04-22T18:15:00.000Z,
  "rawResponse": {
    "collection": "raw_platform_responses",
    "contentHash": "4ba0f7d9dd41efb9e8e96a1e8e90e986cff96b89c823b789d98c18649a7fbb3c",
  },
  "thumbnailUrl": "https://scontent.example/cover.jpg",
}
`;

exports[`Facebook post mapper (pinning) postToContent image post with full_picture and a single image attachment 1`] = `
{
  "caption": "Check out this view",
  "children": undefined,
  "contentType": "image",
  "fetchedAt": 2026-04-28T12:00:00.000Z,
  "linkAttachmentTitle": null,
  "linkAttachmentUrl": null,
  "location": null,
  "mediaProductType": null,
  "mediaUrls": [
    "https://scontent.example/img-large.jpg",
  ],
  "mentions": null,
  "metrics": {
    "comments": 12,
    "likes": 84,
  },
  "permalink": "https://facebook.com/12345/posts/67890",
  "platformContentId": "12345_67890",
  "publishedAt": 2026-04-20T10:30:00.000Z,
  "rawResponse": {
    "collection": "raw_platform_responses",
    "contentHash": "6817f7426aeb394d0ac2cca7cfcc2daea8afbcfbdf43b4f47946694fb60b4de9",
  },
  "thumbnailUrl": "https://scontent.example/img.jpg",
}
`;

exports[`Facebook post mapper (pinning) postToContent text-only post (no media) 1`] = `
{
  "caption": "Just a text update.",
  "children": undefined,
  "contentType": "other",
  "fetchedAt": 2026-04-28T12:00:00.000Z,
  "linkAttachmentTitle": null,
  "linkAttachmentUrl": null,
  "location": null,
  "mediaProductType": null,
  "mediaUrls": [],
  "mentions": null,
  "metrics": {
    "comments": 0,
    "likes": 3,
  },
  "permalink": "https://facebook.com/12345/posts/111",
  "platformContentId": "12345_111",
  "publishedAt": 2026-04-21T09:00:00.000Z,
  "rawResponse": {
    "collection": "raw_platform_responses",
    "contentHash": "7362a88d0d5d4cc303265b7ead60e0caebfade291b815090de96d61e82a44eae",
  },
  "thumbnailUrl": null,
}
`;

exports[`Facebook post mapper (pinning) postToContent video post (attachments.media_type=video, no full_picture) 1`] = `
{
  "caption": null,
  "children": undefined,
  "contentType": "video",
  "fetchedAt": 2026-04-28T12:00:00.000Z,
  "linkAttachmentTitle": null,
  "linkAttachmentUrl": null,
  "location": null,
  "mediaProductType": null,
  "mediaUrls": [
    "https://scontent.example/v.mp4",
  ],
  "mentions": null,
  "metrics": {
    "comments": 1,
    "likes": 9,
  },
  "permalink": "https://facebook.com/12345/posts/333",
  "platformContentId": "12345_333",
  "publishedAt": 2026-04-23T08:00:00.000Z,
  "rawResponse": {
    "collection": "raw_platform_responses",
    "contentHash": "4afedad4f0727598eb30e616c732d12a754c9f2e2be3337011a46f61cbd29e2f",
  },
  "thumbnailUrl": null,
}
`;
